TheKabal (2 March 2013)
--------------------------------------
TEXT_GOTOMAIN has been replaced by \bnt\bnttext::gotomain, which is auto-loaded from the vendor/bnt directory.
Making numbers () calls more consistent, replacing with number_format to move towards removing number() from global_includes

TheMightyDude (1 March 2013)
--------------------------------------
Fixed PHP Notice: Use of undefined constant credits - assumed 'credits' in check_fighters.php on line 113
Fixed PHP Notice: Trying to get property of non-object in includes/db_kill_player.php on line 46
Fixed PHP Notice: Object of class ADORecordSet_mysqlt could not be converted to int in includes/distribute_toll.php on line 32
Fixed PHP Notice: Undefined offset: 1 in log.php on line 438
Fixed PHP Notice: Undefined offset: 2 in log.php on line 438
Fixed PHP Notice: Undefined variable: l_ibank_notenturns in planet.php on line 428
Fixed PHP Notice: Undefined index: team_id in planet_report_ce.php on line 293
Fixed PHP Notice: Undefined index: team_id in planet_report_ce.php on line 301
Fixed PHP Notice: Undefined variable: l_totalcost in planet3.php on line 159
Fixed PHP Notice: Undefined variable: l_traded_ore in planet3.php on line 159
Fixed PHP Notice: Undefined variable: l_traded_organics in planet3.php on line 159
Fixed PHP Notice: Undefined variable: l_traded_goods in planet3.php on line 159
Fixed PHP Notice: Undefined variable: l_traded_energy in planet3.php on line 159
Fixed PHP Notice: Undefined variable: l_trade_complete in planet3.php on line 167
Fixed PHP Notice: Undefined variable: l_notenough_power in planet3.php on line 131
Fixed PHP Notice: Undefined variable: l_toplanetmenu in planet3.php on line 131

TheKabal (1 March 2013)
--------------------------------------
Redo calc_ownership so that it does not use global variables, in preparation for migrating it to be autoloaded
Updated composer to latest version