@@ -39,7 +39,7 @@ function xenobe_to_sec_def ($db)
         \bnt\dbop::dbresult ($db, $resultf, __LINE__, __FILE__);
         $i = 0;
         $total_sector_fighters = 0;
-        if ($resultf > 0)
+        if ($resultf instanceof ADORecordSet)
         {
             while (!$resultf->EOF)
             {
@@ -54,7 +54,7 @@ function xenobe_to_sec_def ($db)
         \bnt\dbop::dbresult ($db, $resultm, __LINE__, __FILE__);
         $i = 0;
         $total_sector_mines = 0;
-        if ($resultm > 0)
+        if ($resultm instanceof ADORecordSet)
         {
             while (!$resultm->EOF)
             {
